重构一下，邮件支持附件